# Moodle-MCP-Server

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: config_debug.py  live_smoke.py  live_smoke_v2.py
src/moodle_mcp/: __init__.py  __main__.py  config.py  downloader.py  html_utils.py  markdown_renderer.py  moodle_client.py  paths.py  server.py  submissions.py
tests/: conftest.py  test_config.py  test_html_utils.py  test_markdown_renderer.py  test_paths.py
